--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,7 +95,12 @@ dependencies:
   image_picker: ^1.0.7
   file_picker: ^10.3.7
   audioplayers: ^6.5.1
+
   
+  # Backend & Payments
+  supabase_flutter: ^2.5.0
+  flutter_stripe: ^10.1.1
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   # Testing
