--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,4 +1,5 @@
-name: Deploy to Firebase Hosting on merge
+name: Deploy Flutter Web to Firebase Hosting (Merge)
+
 on:
   push:
     branches:
@@ -7,10 +8,12 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Flutter
+      # INSTALL FLUTTER
+      - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
@@ -18,13 +21,14 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Build Flutter web
+      - name: Build Flutter Web
         run: flutter build web --release
 
+      # DEPLOY TO FIREBASE
       - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_HABIT_TRACKER_JVP }}
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_HABIT_TRACKER_JVP }}"
           channelId: live
           projectId: habit-tracker-jvp
