--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,16 @@
 {
-  "projects": {
-    "default": "habit-tracker-jvp"
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
